zookeeper docker-compose, children counter fix